📦 Improved minecraft info and show fabric in list